Init Quarkus